
Please report bugs to: https://bugs.launchpad.net/tomdroid

Mailing list: tomdroid-dev@lists.launchpad.net 
Join it at: https://launchpad.net/~tomdroid-dev

For more details and developer visible changes see the ChangeLog

-------------------------------------------------------------------------------
Tomdroid <version-code> - <version-name> released on <release-date>

* fixed bug lp:1070787 Note Title should be more obvious in Conflict resolving dialogue
* It is now possible to change sync-method, sync-server, folder location without loosing any notes!
* fixed bug lp:1051932 &amp; gets replaced with &amp;amp; on clicking save button
* fixed bug lp:1064149 Tomdroid Sync fails, datetime_format error
* fixed bug lp:1074894 NotesList -> Longpress -> Revert -> CRASH!
* fixed bug lp:1074661 Opening *.note file results in unparsed raw xml code and the uuid as title (when opened from GMail)
* fixed bug lp:1068681 Tomdroid should just show up in the "open file with" Android dialogue when the extension is *.note 
* fixed bug lp:1068689 Share menu button in the NoteView does not show "send as text or as file" dialogue 
* fixed bug lp:1068684 Toast message is showing "Error sending note to %1$s."  
* fixed bug lp:1074602 Tomdroid does not send the "create-data" field in JSON when web syncing   
 

-------------------------------------------------------------------------------
Tomdroid 0.7.2 beta - "For the Love of Monkey" released on 2012-10-17

* added GMail-style two-color pane and selector
* added ability to receive text-shares from other notes (lp:1039104)
* added ability to send and receive note files
* added auto-backup to SD Card preference
* made First Note translatable
* moved search function to main activity (allowing two-pane landscape view in results)
* added option to show deleted notes in list
* added ability to import plain text
* added file picker to import plain text and note files from within Tomdroid
* added options to turn off hyperlink creation