@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="false" android:drawable="@drawable/btn_small" />
-    <item android:state_checked="true" android:drawable="@drawable/btn_small_toggle" />
     <item android:state_pressed="true" android:drawable="@drawable/btn_small_toggle" />
+    <item android:drawable="@drawable/btn_small" />
 </selector>
