@@ -25,25 +25,34 @@
 	
 	<!-- application details -->
 	<string name="app_name">Tomdroid</string>
-	<string name="app_desc">Tomboy compatible wikiwiki note-taking application that can take notes.</string>
+	<string name="app_desc">Tomboy compatible wikiwiki note-taking app that can take notes.</string>
 	<string name="author">Olivier Bilodeau</string>
 	
 	<!-- main.xml -->
 	<string name="strListEmptyWaiting">Please wait while the notes load…</string>
 	<string name="strListEmptyNoNotes">There are no notes in Tomdroid\'s database.</string>
 	
+	<!-- Menu entry with icon -->
 	<string name="menuSync">Sync</string>
+	<!-- Menu entry with icon -->
 	<string name="menuPrefs">Settings</string>
+	<!-- Menu entry with icon -->
 	<string name="menuAbout">About</string>
+	<!-- Title of an alert box -->
 	<string name="titleWelcome">Warning</string>
 	<string name="titleAbout">About Tomdroid</string>
+	<!-- First start alert box -->
 	<string name="strWelcome">Welcome to Tomdroid.\n\nPlease note that this is beta quality software and that it contains known problems.\n\nWe are well aware of these issues and intend to work on them quickly but I also wanted to get something out and tested as quickly as possible.\n\nIf you would like to contribute, help at all levels would be appreciated. Hop on board on launchpad.net/tomdroid and contact us!\n</string>
+	<!-- \n\n are linebreaks, %1$s etc are the name of the Author, the version and the license name -->
 	<string name="strAbout">%1$s\n\nAuthor: %2$s\nVersion: %3$s\nLicensed under the GPLv3</string>
 	
-	<!-- TODO aren\'t these available somewhere else? like in the SDK? //-->
+	<!-- positive Button -->
 	<string name="btnOk">OK</string>
+	<!-- negative Button -->
 	<string name="btnCancel">Cancel</string>
+	<!-- Button -->
 	<string name="btnClose">Close</string>
+	<!-- Button -->
 	<string name="btnProjectPage">Project page</string>
 	<string name="btnSavetoSD">Save</string>
 	
@@ -56,20 +65,27 @@
 	<string name="prefTomboyWeb">Online Synchronization</string>
 	<string name="prefAuthenticate">Authenticate</string>
 	<string name="prefLocation">Location on SD Card</string>
+	<!-- %1$s will be repaced by the folder name eg /tomdroid -->
 	<string name="prefFolderCreated">The folder \"%1$s\" does not exist yet. Please connect your device to the computer, create the folder and fill it with *.note files.</string>
+	<!-- %1$s will be repaced by the folder name eg /testfolder -->
 	<string name="prefNoValidLocation">\"%1$s\" is not a valid folder location. Please try again!</string>
+	<!-- %1$s will be replaced with an text entry the user had done -->
 	<string name="prefNoValidEntry">\"%1$s\" is not a valid entry. Please try again!</string>
 	<string name="prefSyncCompleteAuth">Completing authentication. Please wait…</string>
 	<string name="prefSyncConnectionFailed">The connection to the server has failed, please check that the address you entered is correct.</string>
 	<string name="prefServerEmpty">The server address changed but the new value is empty</string>
 			
 	<string name="titleSyncService">Choose the sync service to use</string>
+	<!-- %1$s will be replaced with "Online Synchronisation", "SD Card",...-->
 	<string name="messageSyncComplete">Synchronization with %1$s is complete.</string>
+	<!-- %1$s will be replaced with "SD Card",... -->
 	<string name="messageSyncNoNote">No notes found on %1$s.</string>
 	<string name="messageSyncNoConnection">You are not connected to the Internet.</string>
 	<string name="messageSyncAlreadyInProgress">Sync already in progress</string>
 	<string name="messageSyncError">There was an error trying to parse your note collection. If you are able to replicate the problem, please contact us!</string>
+	<!-- Altert box header -->
 	<string name="error">Error</string>
+	<!-- Altert box header -->
 	<string name="titleNoteNotFound">No Such Note</string>
 	<string name="messageNoteNotFound">The requested note could not be found. Maybe it was deleted or removed through synchronization.</string>
 	<string name="messageErrorNoteParsing">Error parsing note.</string>
@@ -77,7 +93,6 @@
 	<string name="messageNoSDCard">SDCard storage not found.</string>
 	
 	<!-- NoteSorting -->
-	<string name="menuSort">Change Sort</string>
 	<string name="titleDefaultSorting">Choose default sorting method</string>
 	<string name="prefDefaultSortingTitle">Default Sort Method</string>
 	<string name="prefSorting">Sort By:</string>
@@ -97,8 +112,11 @@
 	<string name="send">Send</string>
 	
 	<!--  Search -->
+	<!-- Text in input field for search -->
 	<string name="search_hint">Search Notes</string>
+	<!-- Preferences Field in global search to include notes -->
 	<string name="search_description">Text in your notes</string>
+	<!-- %s will be replaced with the search string -->
 	<string name="strNoResults">No notes found for \"%s\"</string>
 	<string name="menuSearch">Search</string>
 	<string name="SearchResultTitle">Search Results:</string>
@@ -112,6 +130,7 @@
 	<string name="textYexterday">Yesterday</string>
 
 	<!-- Shortcuts handling -->
+	<!-- Header when picking a note for a new shortcut -->
 	<string name="shortcuts_view_caption">Choose a Note</string>
 	<string name="shortcut_menu_item_caption">Tomdroid Note</string>
 	<string name="btnRemoveShortcut">Remove shortcut</string>
@@ -147,11 +166,6 @@
 	<string name="italic">i</string>
 	<!-- S stands for strike through (in format bar) -->
 	<string name="strike"><strike>S</strike></string>
-	<string name="mono">monospace</string>
-	<string name="highlight">highlight</string>
-	<string name="size">size</string>
-	<string name="xml">XML</string>
-	<string name="text">Text</string>
 	<string name="titleErrorParsingXML">Error parsing note</string>
 	<string name="messageErrorParsingXML">There was an error parsing the note. Please check your XML.</string>
 	<string name="messageNoteSaved">Note saved locally.</string>
@@ -163,7 +177,9 @@
 	<string name="huge">Huge</string>
 	<string name="messageDiscardChanges">Do you really want to discard your changes and revert the note to the last saved version?</string>
 	<string name="titleDiscardChanges">Discard Changes?</string>
+	<!-- this is the > symbol, do not change -->
 	<string name="gt"><b>&gt;</b></string>
+	<!-- this is the < symbol, do not change -->
 	<string name="lt"><b>&lt;</b></string>
 			
 	<!-- New Titles -->
@@ -172,13 +188,17 @@
 	<string name="search_title">Tomdroid - Search Results</string>
 	<string name="shortcut_title">Tomdroid - Shortcuts</string>
 	<string name="pref_title">Tomdroid - Settings</string>
+	<string name="compare_title">Tomdroid - Note Conflict</string>
+	<string name="filePickerTitle">Tomdroid - Import Note</string>
 			
 	<!-- new prefs -->
+	<!-- subheader in settings -->
 	<string name="prefDisplay">Display Preferences</string>
 	<string name="prefBaseSize">Base Font Size</string>
+	<!-- subheader in settings -->
 	<string name="prefSync">Synchronization</string>
+	<!-- subheader in settings -->
 	<string name="prefTools">Tools</string>
-	<string name="prefAutoSaveTitle">Auto Save Note</string>
 	<string name="prefAutoSave">Save notes automatically on exiting editor.</string>
 	<string name="prefDeletedNotesTitle">Show Deleted Notes</string>
 	<string name="prefDeletedNotes">If checked, will show deleted notes in notes list.</string>
@@ -193,68 +213,104 @@
 	<string name="backupPref">Copy all local notes to SD Card</string>
 	<string name="autoBackupPrefTitle">Auto-Backup</string>
 	<string name="autoBackupPref">Copy local note to SD Card on save</string>
+	<!-- subheader in settings -->
 	<string name="prefLinks">Hyperlink Preferences</string>
+	<!-- Checkbox in settings -->
 	<string name="prefLinkTitlesTitle">Link Titles</string>
+	<!-- Description for checkbox in settings -->
 	<string name="prefLinkTitles">link to other note titles</string>
+	<!-- Checkbox in settings -->
 	<string name="prefLinkUrlsTitle">Link Web Addresses"</string>
+	<!-- Description for checkbox in settings -->
 	<string name="prefLinkUrls">e.g. "www.google.com"</string>
+	<!-- Checkbox in settings -->
 	<string name="prefLinkEmailsTitle">Link Emails</string>
+	<!-- Description for checkbox in settings -->
 	<string name="prefLinkEmails">e.g. name@address.com</string>
+	<!-- Checkbox in settings -->
 	<string name="prefLinkPhonesTitle">Link Telephone Numbers</string>
+	<!-- Description for checkbox in settings -->
 	<string name="prefLinkPhones">link telephone numbers to phone app</string>
+	<!-- Checkbox in settings -->
 	<string name="prefLinkAddressesTitle">Link Map Addresses</string>
-	<string name="prefLinkAddresses">link to addresses to maps application</string>
+	<!-- Description for checkbox in settings -->
+	<string name="prefLinkAddresses">link to addresses to maps app</string>
 			
 	<!-- syncNotes -->
 
+	<!-- %1$s will be replaced with "Online Synchronisation", "SD card",... -->
 	<string name="syncing">Syncing with %1$s</string>
 	<string name="syncing_connect">connecting to service…</string>
 	<string name="gettings_notes">getting list of remote notes…</string>
 	<string name="syncing_local">updating local notes…</string>
 	<string name="syncing_remote">updating remote notes…</string>
-	<string name="sync_conflict_title">Note Conflict</string>
 	<string name="sync_conflict_description">There was a conflict syncing the note \'%1$s\'</string>
 	<string name="sync_conflict_message">Please choose an action to resolve the conflict.  You may edit either note before choosing, or view the difference by clicking on the labels below.</string>
 	<string name="sync_conflict_deleted">The local version was already deleted.  Please choose from one of the actions below.</string>
 	<string name="sync_conflict_titles_message">A note with that title already exists in the database.  Please choose an action to resolve the conflict.  You may edit either note before choosing, or view the difference by clicking on the labels below.</string>
+	<!-- Button (keep short!) -->
 	<string name="overwrite_remote">Overwrite\nRemote</string>
+	<!-- Button (keep short!) -->
 	<string name="overwrite_local">Overwrite\nLocal</string>
+	<!-- Button (keep short!) -->
 	<string name="delete_remote">Delete\nRemote</string>
+	<!-- Button (keep short!) -->
+	<string name="copy">Create\nCopy</string>
+	<!-- subheader in Conflict Dialouge (keep short!) -->
 	<string name="diff_label">Difference Between Files</string>
 	<string name="diff_titles">-- Title Differences --</string>
 	<string name="diff_content">-- Content Differences --</string>
+	<!-- %1$s will be replaced with a number. -->
 	<string name="line_x">Line %1$s:</string>
+	<!-- subheader in Conflict Dialouge (keep short!) -->
 	<string name="local_label">Local Version</string>
+	<!-- subheader in Conflict Dialouge (keep short!) -->
 	<string name="remote_label">Remote Version</string>
 	<string name="deleted">Deleted</string>
-	<string name="copy">Create\nCopy</string>
+	
+	<!-- %1$s will be replaced with a note title. -->
 	<string name="old">%1$s (old)</string>
 	<string name="close">Close</string>
 	<string name="cancel">Cancel</string>
+	<!-- %1$s will be replaced with "Online Synchronization", "SD Card"... -->
 	<string name="messageAuthComplete">Authorization with %1$s successful.</string>
-	<string name="messageAuthFailed">Authorization with %1$s failed.  Maybe try again?</string>
+	<!-- %1$s will be replaced with "Online Synchronization", "SD Card"... -->
+	<string name="messageAuthFailed">Authorization with %1$s failed. Try again later!</string>
+	<!-- %1$s will be replaced with "Online Synchronization", "SD Card"... -->
 	<string name="messageSyncNoteDeleted">Note deleted from %1$s successfully.</string>
+	<!-- %1$s will be replaced with "Online Synchronization", "SD Card"... -->
 	<string name="messageSyncNotePushed">Note sent to %1$s successfully.</string>
+	<!-- %1$s will be replaced with "Online Synchronization", "SD Card"... -->
 	<string name="messageSyncNotePulled">Note received from %1$s successfully.</string>
+	<!-- %1$s will be replaced with "Online Synchronization", "SD Card"... -->
 	<string name="messageSyncNoteDeleteError">Error deleting note from %1$s.</string>
+	<!-- %1$s will be replaced with "Online Synchronization", "SD Card"... -->
 	<string name="messageSyncNotePushError">Error sending note to %1$s.</string>
+	<!-- %1$s will be replaced with "Online Synchronization", "SD Card"... -->
 	<string name="messageSyncNotePullError">Error receiving note from %1$s.</string>
+	<!-- %1$s will be replaced with "Online Synchronization", "SD Card"... -->
 	<string name="messageSyncParseFailed">Error parsing response from %1$s.</string>
+	<!-- %1$s will be replaced with "Online Synchronization", "SD Card"... -->
 	<string name="messageSyncConnectingFailed">Error connecting to %1$s.  You probably need to authenticate in "Settings".</string>
+	<!-- %1$s will be replaced with "Online Synchronization", "SD Card"... -->
 	<string name="messageRemoteNotesDeleted">Notes deleted from %1$s successfully.</string>
+	<!-- %1$s will be replaced with "Online Synchronization", "SD Card"... -->
 	<string name="messageSyncCancelled">Sync with %1$s cancelled.</string>
 
 	<!-- menu items -->
 	
 	<string name="editTags">Edit Tags</string>
 	<string name="contextRevert">Revert</string>
+	<!-- %1$s will be replaced with note-tag names -->
 	<string name="note_x_tags">Note \'%1$s\' Tags</string>
 	<string name="edit_tags">Edit the tags below, separating with commas</string>
 	<string name="undelete">Undelete Note</string>
+	<!-- menu item with icon -->
 	<string name="menuImport">Import Note</string>
 					
 	<!-- revert notes -->
 	
+	<!-- menu item with icon -->
 	<string name="menuRevert">Revert All</string>
 	<string name="revert_notes">Revert Notes</string>
 	<string name="revert_notes_message">This will revert your local notes to whatever versions exist on the remote service.  Are you sure you want to do this?</string>
@@ -278,32 +334,34 @@
 	<string name="sendChoice">How would you like to send the note?</string>
 	<string name="btnSendAsText">As Text</string>
 	<string name="btnSendAsFile">As File</string>
-	<string name="sync_conflict_import_message">There was a conflict importing the note "%1$s".  The note already exists in the database.  Please choose an action to resolve the conflict.  You may edit either note before choosing, or view the difference by clicking on the labels below.</string>
+	<string name="sync_conflict_import_message">The note already exists in the database.  Please choose an action to resolve the conflict.  You may edit either note before choosing, or view the difference by clicking on the labels below.</string>
+	<!-- Button (keep short!) -->
 	<string name="btnCancelImport">Cancel\nImport</string>
 	<string name="messageFileTooBig">File exceeds maximum import size - are you sure it is plain text?</string>
-	<string name="filePickerTitle">Tomdroid - Import Note</string>
 	<string name="noFiles">No files or directories</string>
 	<string name="chooseFile">Choose a file below that is either a Tomboy note file (which will be imported) or a plain text file (which will create a new note):</string>
-		
+	<!-- Title of first Note -->
 	<string name="firstNoteTitle">Tomdroid\'s First Note</string>
 	
 	<string-array name="firstNoteContent">
 		<item>Welcome to Tomdroid!\n</item>
 		<item>You have no notes here yet. To get started, set your Synchronization preferences under Settings. There are two synchronization options described below.\n</item>
-	    <!-- =text= makes <size:large>text</size:large> --> 
 		<item>=Online Synchronization=</item>
-		<item>Online Synchronization is what you are looking for if you want to sync to Tomboy-Online, Ubuntu One, your own Snowy server or any server supporting the Tomboy Web REST API.\n</item>
+		<!-- =text= makes <size:large>text</size:large> -->
+		<item>Online Synchronization is what you are looking for if you want to sync to Tomboy-Online, Ubuntu One, your own Rainy/Snowy server or any server supporting the Tomboy Web REST API.\n</item>
 		<item>To use it, set Sync Service to Online Synchronization in preferences then  provide a Server URL. Here are some of the public ones:</item>
 		<!-- -text is for list-items. --> 
 		<item>-Tomboy Online - https://edge.tomboy-online.org/</item>
 		<!-- -text is for list-items. --> 
-		<item>-Ubuntu One - https://one.ubuntu.com/notes\n</item>
+		<item>-Ubuntu One - https://one.ubuntu.com/notes</item>
+		<!-- -text is for list-items. --> 
+		<item>-rainy.notesync.org - https://notesync.org:8080/[username]/[password]/\n</item>
 		<item>Once set, hit the Sync logo on Tomdroid\'s top bar to synchronize your notes.\n</item>
-		<item>Note: you might want to back up your Tomboy notes before syncing, since this app is still under development and may corrupt your Tomboy notes.  The notes can be found in ~/.local/share/tomboy/ on Linux.\n</item>
+		<item>Note: you might want to back up your Tomboy notes before syncing, since this app is still under development and may corrupt your Tomboy notes.\n</item>
+		<item>Please see http://live.gnome.org/Tomboy/Directories for the location of the *.note files on all platforms.\n</item>
 		<!-- =text= makes <size:large>text</size:large> --> 
 		<item>=SD Card=</item>
-		<item>Put your Tomboy notes (*.note) on your SD Card under tomdroid/. The notes can be found in ~/.local/share/tomboy/ on Linux. Once the notes are copied, set Sync Service to SD Card in preferences then hit the Sync logo on Tomdroid\'s top bar.\n</item>
-		<item>See http://live.gnome.org/Tomboy/Directories for the notes\' location on other platforms.\n</item>
+		<item>Put your Tomboy notes (*.note) on your SD Card under tomdroid/. Once the notes are copied, set Sync Service to SD Card in preferences then hit the Sync logo on Tomdroid\'s top bar.\n</item>
 		<item>Also, Tomdroid is always looking for new contributors. If you are interested join the tomdroid-dev team on Launchpad: http://launchpad.net/~tomdroid-dev.\n</item>
 		<item>Lastly, if you encounter any issue, please report it at: https://bugs.launchpad.net/tomdroid</item>
 	</string-array>
@@ -318,7 +376,7 @@
 	<string name="market_description">A Tomboy client for Android. Tomboy is a desktop note-taking app using a wikiwiki approach and a simple user interface.\n\n* Note format compatibility with Tomboy\n* Online note synchronization with Snowy, Tomboy Online or Ubuntu One\n* SD Card importation\n* Open source!</string>
 	
 	<!-- 80 chars max -->
-	<string name="market_promotext">Note-taking application with online synchronization compatible with Tomboy</string>
+	<string name="market_promotext">Note-taking app with online synchronization compatible with Tomboy</string>
 
 	<!-- 500 chars max -->
         <string name="market_recent_changes">0.6 \"Small World\" release\n* Create home-screen shortcuts to notes\n* Specify a folder to use for SD Card sync\n* Reload current note after sync\n* A lot of new translations: ar, bs, ca, cs, da, de, el, en-rGB, eo, es, eu, fa, fi, fo, fr, gd, hi, hu, it, ja, ko, ms, nb, pl, pt, pt-rBR, ru, si, sv, ta, te, tr, ug, uk, zh, zh-rCN\n* Several bugfixes\n</string>
